# Chess

./: .gitignore  CMakeLists.txt
head/: Bishop.h  CapturedFigure.h  Figure.h  Horce.h  King.h  Pawn.h  Queen.h  rook.h
src/: Bishop.cpp  CapturedFigure.cpp  Chesss.cpp  Figure.cpp  Horce.cpp  King.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
