cmake_minimum_required(VERSION 3.6)
project(chessSFML)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
FILE(GLOB CPPS "src/*.cpp")
FILE(GLOB HEADS "head/*.h")
if(WIN32)
set(SFML_STATIC_LIBRARIES  TRUE)
set(SFML_DIR "${PROJECT_SOURCE_DIR}/SFML-2.5.1/lib/cmake/SFML")
endif()
find_package(SFML COMPONENTS system window graphics audio network REQUIRED)
if(WIN32)
include_directories(${PROJECT_SOURCE_DIR}/SFML/include)
endif()
include_directories(head)
add_executable(${PROJECT_NAME} ${CPPS} ${HEADS})
target_link_libraries(${PROJECT_NAME} sfml-system sfml-window sfml-graphics sfml-audio)
